"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------
For top of CVS tree

client.c: update call to metaserver_show
client.h: make meta_server, meta_port vars available to other files.
gx11.c: clear echo hiding after user completes entry in text
    window.
metaserver.c: Add parameter to metaserver_show which determines if
    we display instructions for selecting metaserver.  Re-get
    metaserver information if user hits enter on metaserver selection.
player.c: Add metaserver command that gets updated metaserver information.
proto.h: rebuilt.
MSW 2001-04-29

gx11.c: Add disconnect menu item and callback function to disconnect
   from server.
player.c: Fix/improve firing logic.  Was problem with gtk client in
   that it would stop firing after a little while when holding shift
   direction.  This was because the outgoing command queue got filled
   up and never emptied because it still sent fire_stop commands.
   Add 'disconnect command to disconnect from server.
MSW 2001-04-28

Makefile.in: Add gx11.c to depend directive, so it recompiles properly
   on changes to png.c, xutil.c
command.c: clear no_echo instead of letting the graphic handler do this.
   also add call to x_set_echo - this fixes cases in nopopups mode of
   it not switching to echo things properly.
gx11.c: Add nopopups/splitinfo options to configure menu.  Add x_set_echo
   function, and remove detection of this from do_timeout.
proto.h: automatic rebuild.
x11.c: Add setup x_set_echo function.
xutil.c: Add saving/loading of splitinfo and nopopups value to/from
   ~/.crossfire/gdefaults file.
MSW 2001-04-27

Note: by default, the command history forward/back keys are not bound
   to anything.  At least on Sparc/Solaris systems, the up key in
   the cluster of 4 arrow keys is the same keysym as the the 
   key on the keypad, so by automatically binding these, you basically
   make it so the player can not move north/south, so I figure its better